--- a/home.html
+++ b/home.html
@@ -11,7 +11,22 @@
 </head>
 <body>
     <div id="navbar"></div>
-
-    <h1>Hello</h1>
+    <div class="home-container">
+        <div class="home-header">
+            <div class="header-text">
+            <h1>Find a Job With Your Interests and Abilities</h1>
+            <p>Find jobs that match your interests with us. We provide a<br> place to find your jobs.</p>
+            <button class="get-started-btn" onclick="window.location.href='jobs.html'">Get Started</button>
+        </div>
+            <img src="woman.png" alt="Slack">
+        </div>
+        <div class="footer-logos">
+            <img src="flipkart.png" alt="flipkart">
+            <img src="ibm.png" alt="ibm">
+            <img src="oracle.png" alt="oracle">
+            <img src="infosys.png" alt="infosys">
+            <img src="amazon.png" alt="amazon">
+        </div>
+    </div>
 </body>
 </html>
