--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
         <button onclick="window.location.href='login.html'">Login</button>
         <button onclick="window.location.href='register.html'">Register</button>
     </div>
-    <div id="logout-button-container" style="display: none;">
+    <div id="logout-button-container" class="logout-button" style="display: none;">
         <button id="logout-button">Logout</button>
     </div>
 </body>
