--- a/apply.html
+++ b/apply.html
@@ -13,7 +13,7 @@
     <div id="navbar"></div>
     <div class="top-menu"><h1>Apply for Jobs</h1></div>
     <div id="error-message" class="error-message"></div>
-    <div id="success-message" class="success-message"></div>
+    <div id="success-message" class="success-message" style="margin-left: 20px;"></div>
     <form action="/submit-form" method="post" enctype="multipart/form-data" class="form">
         <label for="jobTitle">Job Title</label>
         <input type="text" id="jobTitle" name="jobTitle" readonly>
@@ -63,7 +63,7 @@
     const companyField = document.getElementById('company');
     const locationField = document.getElementById('location');
     const disabilityfield = document.getElementById('disability');
-
+    
     if (queryParams.title) {
         jobTitleField.value = decodeURIComponent(queryParams.title);
     }
@@ -77,7 +77,7 @@
     }
 
     if (queryParams.disability) {
-        disability.value = decodeURIComponent(queryParams.disability);
+        disabilityfield.value = decodeURIComponent(queryParams.disability);
     }
 };
     // Function to get query parameters
