--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notifications</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="logo.png">
     <script src='https://unpkg.com/akar-icons-fonts'></script>
@@ -11,25 +11,6 @@
 </head>
 <body>
     <div id="navbar"></div>
-    <!-- <div class="top-menu"><h1>Register</h1></div>
-    <div id="error-message" class="error-message"></div>
-    <form action="/register" method="POST" class="form" onsubmit="return validateForm()">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required><br>
-
-        <input type="submit" value="Register"><br>
-
-        Already Registered? <a href="login.html" class="signin">Login</a>
-    </form> -->
     <div class="container-r">
         <!-- Image Section -->
         <div class="image-section">
