--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Notifications</title>
+        <title>Sign In</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/png" href="logo.png">
         <script src='https://unpkg.com/akar-icons-fonts'></script>
