--- a/home.html
+++ b/home.html
@@ -21,11 +21,11 @@
             <img src="woman.png" alt="Slack">
         </div>
         <div class="footer-logos">
-            <img src="flipkart.png" alt="flipkart">
-            <img src="ibm.png" alt="ibm">
-            <img src="oracle.png" alt="oracle">
-            <img src="infosys.png" alt="infosys">
-            <img src="amazon.png" alt="amazon">
+            <img src="logos/flipkart.png" alt="flipkart">
+            <img src="logos/ibm.png" alt="ibm">
+            <img src="logos/oracle.png" alt="oracle">
+            <img src="logos/infosys.png" alt="infosys">
+            <img src="logos/amazon.png" alt="amazon">
         </div>
     </div>
 </body>
