--- a/jobs.html
+++ b/jobs.html
@@ -35,16 +35,16 @@
                 <div class="filter-option" data-filter="Developer">Developer</div>
                 <div class="filter-option" data-filter="Engineer">Engineer</div>
                 <div class="filter-option" data-filter="Designer">Designer</div>
-                <div class="filter-option" data-filter="Game">Game</div>
+                <div class="filter-option" data-filter="Support">Support</div>
             </div>
         </div>
         <div class="filter-container">
             <button id="ability-button" class="dropdown-button"><i class="fa-solid fa-wheelchair"></i></button>
             <div id="ability-options" class="filter-options" style="display: none;">
                 <div class="ability-option" data-filter="all">All</div>
-                <div class="ability-option" data-filter="Hand">Hand</div>
-                <div class="ability-option" data-filter="Leg">Leg</div>
-                <div class="ability-option" data-filter="Brain">Brain</div>
+                <div class="ability-option" data-filter="Vision">Vision</div>
+                <div class="ability-option" data-filter="Mobility">Mobility</div>
+                <div class="ability-option" data-filter="Neurological">Neurological</div>
             </div>
         </div>
     </div>
