--- a/jobs.html
+++ b/jobs.html
@@ -64,5 +64,17 @@
                 </div>
             </div>
         </div>
+        <script>
+            window.embeddedChatbotConfig = {
+            chatbotId: "IlFEuo4qL6lYDp5StDDoa",
+            domain: "www.chatbase.co"
+            }
+            </script>
+            <script
+            src="https://www.chatbase.co/embed.min.js"
+            chatbotId="IlFEuo4qL6lYDp5StDDoa"
+            domain="www.chatbase.co"
+            defer>
+            </script>
 </body>
 </html>
