--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <h2>Sign In</h2>
               </div>
                 <div id="success-message" class="success-message"></div>
-                <div id="error-message" class="error-message"></div>
+                <div id="error-message" class="error-message" style="margin-left: 6%;"></div>
                 <form action="/login" method="POST" id="stripe-login" >
                   <div class="field">
                     <label for="username">Username:</label>
