--- a/navbar.html
+++ b/navbar.html
@@ -59,7 +59,7 @@
 </ul>
 <img src="logol.png" alt="logo" class="logo">
 <!-- partial -->
-  <script src='https://unpkg.com/akar-icons-fonts'></script><script  src="./script.js"></script>
-
+  <script src='https://unpkg.com/akar-icons-fonts'></script>
+  <script  src="./script.js"></script>
 </body>
 </html>
