--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div class="team-container">
             <a href="https://www.linkedin.com/in/ahad-alyani09/" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="card">
-            <div class="team-member" style="background-image: url(ahad2.j);">
+            <div class="team-member" style="background-image: url(ahad.png);">
                 <div class="member-name">
                 <h3>Ahad Alyani</h3>
                 <p>Customer Success Agent</p>
